--- a/task02.html
+++ b/task02.html
@@ -43,7 +43,7 @@
             const form = document.getElementById("emailForm");
             const formData = new FormData(form);
 
-            fetch("index02.php", {
+            fetch("task02.php", {
                 method: "POST",
                 body: formData,
             })
