--- a/task01.html
+++ b/task01.html
@@ -38,7 +38,7 @@
 
         function UrlAsync() {
             const nameInput = document.getElementById("nameInput").value;
-            const url = `index01.php?name=${nameInput}`;
+            const url = `task01.php?name=${nameInput}`;
 
             fetch(url)
                 .then(response => response.json())
