--- a/task05.html
+++ b/task05.html
@@ -3,50 +3,39 @@
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <meta charset="UTF-8" />
-    <title>Task05</title>
+    <title>Product Search</title>
 </head>
 <body>
     <div class="container mt-5">
-        <h1>Add Product</h1>
-        <form id="addProductForm">
-            <div class="form-group">
-                <label for="typeInput">Type:</label>
-                <input type="text" class="form-control" id="typeInput" name="type" placeholder="Type">
-                <div id="typeValidation" class="validation-message"></div>
-            </div>
-            <div class="form-group">
-                <label for="brandInput">Brand:</label>
-                <input type="text" class="form-control" id="brandInput" name="brand" placeholder="Brand">
-                <div id="brandValidation" class="validation-message"></div>
-            </div>
-            <div class="form-group">
-                <label for="priceInput">Price:</label>
-                <input type="text" class="form-control" id="priceInput" name="price" placeholder="Price">
-                <div id="priceValidation" class="validation-message"></div>
-            </div>
-            <div class="form-group">
-                <label for="numberInput">Number:</label>
-                <input type="text" class="form-control" id="numberInput" name="number" placeholder="Number">
-                <div id="numberValidation" class="validation-message"></div>
-            </div>
-            <button type="submit" class="btn btn-primary">Add Product</button>
-        </form>
-        <div id="resultMessage" class="mt-3"></div>
-
-        <!-- Add a table to display products -->
-        <h2>Product List</h2>
-        <table id="productTable" class="table">
+        <h1>Product Search</h1>
+        <div class="form-group">
+            <label for="typeInput">Type:</label>
+            <input type="text" class="form-control" id="typeInput" placeholder="Type">
+        </div>
+        <div class="form-group">
+            <label for="brandInput">Brand:</label>
+            <input type="text" class="form-control" id="brandInput" placeholder="Brand">
+        </div>
+        <div class="form-group">
+            <label for="priceInput">Price:</label>
+            <input type="text" class="form-control" id="priceInput" placeholder="Price">
+        </div>
+        <div class="form-group">
+            <label for="numberInput">Number in Stock:</label>
+            <input type="text" class="form-control" id="numberInput" placeholder="Number in Stock">
+        </div>
+        <button type="button" class="btn btn-primary" id="searchButton">Search</button>
+        <table id="productTable" class="table mt-3">
             <thead>
                 <tr>
                     <th>Type</th>
                     <th>Brand</th>
                     <th>Price</th>
-                    <th>Number</th>
-                    <th>Stock</th>
+                    <th>Number in Stock</th>
                 </tr>
             </thead>
             <tbody>
-                <!-- Products will be dynamically added here -->
+                <!-- Results will be displayed here -->
             </tbody>
         </table>
     </div>
